# preFlight

./: CHANGELOG.md  CMakeLists.txt  README.md  build_deps.sh  build_macos.sh  build_ninja.bat  build_win.bat  version.inc
bundled_deps/libigl/igl/copyleft/cgal/: assign_scalar.cpp  assign_scalar.h
resources/profiles/: orca_system_profiles.json
src/: CMakeLists.txt
src/clipper2/src/: clipper.engine.cpp
src/libslic3r/: AppConfig.cpp  Brim.cpp  CMakeLists.txt  ClipperUtils.hpp  ElephantFootCompensation.cpp  FileReader.cpp  FileReader.hpp  GCode.cpp  Layer.cpp  Layer.hpp  Model.hpp  OrcaConfigImporter.cpp  OrcaConfigImporter.hpp  OrcaKeyMapping.cpp  OrcaKeyMapping.hpp  PerimeterGenerator.cpp  PlaceholderParser.cpp  Preset.cpp  Preset.hpp  PresetBundle.cpp  Print.cpp  Print.hpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  ShortestPath.cpp  ShortestPath.hpp  SupportSpotsGenerator.cpp  TriangleMeshSlicer.cpp
src/libslic3r/Athena/: WallToolPaths.cpp  WallToolPaths.hpp
src/libslic3r/Athena/BeadingStrategy/: BeadingStrategyFactory.cpp  BeadingStrategyFactory.hpp  WideningBeadingStrategy.cpp  WideningBeadingStrategy.hpp
src/libslic3r/Fill/: Fill.cpp  FillBase.cpp  FillConcentric.cpp  FillRectilinear.cpp
src/libslic3r/Format/: 3mf.cpp  3mf.hpp
src/libslic3r/GCode/: CoolingBuffer.cpp  ExtrusionOrder.cpp  ExtrusionProcessor.cpp  GCodeProcessor.cpp  GCodeWriter.cpp  GCodeWriter.hpp  SeamAligned.cpp  SeamAligned.hpp  SeamPlacer.cpp  Wipe.cpp
src/libslic3r/Support/: SupportCommon.cpp  SupportMaterial.cpp  TreeSupport.cpp
src/libvgcode/include/: ColorRange.hpp
src/libvgcode/src/: ColorRange.cpp  OpenGLUtils.cpp  Shaders.hpp  ViewerImpl.cpp
src/occt_wrapper/: CMakeLists.txt
src/platform/osx/: Info.plist.in
src/slic3r/GUI/: 3DBed.cpp  BackgroundSlicingProcess.cpp  BackgroundSlicingProcess.hpp  ConfigManipulation.cpp  ConfigWizard.cpp  DarkMode.cpp  DoubleSliderForGcode.cpp  DoubleSliderForLayers.cpp  EditGCodeDialog.cpp  ExtraRenderers.cpp  Field.cpp  GCodeViewer.cpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GUI_App.cpp  GUI_App.hpp  GUI_Factories.cpp  GUI_ObjectLayers.cpp  GUI_ObjectList.cpp  GUI_ObjectList.hpp  GUI_ObjectManipulation.cpp  GUI_ObjectSettings.cpp  GUI_Preview.cpp  GUI_Preview.hpp  GUI_Utils.hpp  ImGuiDoubleSlider.cpp  ImGuiDoubleSlider.hpp  ImGuiWrapper.cpp  KBShortcutsDialog.cpp  LoadStepDialog.cpp  MainFrame.cpp  ModernTabBar.cpp  ModernTabBar.hpp  MsgDialog.cpp  NotesDialog.hpp  NotificationManager.cpp  OG_CustomCtrl.cpp  OpenGLManager.cpp  OptionsGroup.cpp  OptionsGroup.hpp  (+14 more)
src/slic3r/GUI/Gizmos/: GLGizmoBrimEars.cpp  GLGizmoFuzzySkin.cpp  GLGizmoMmuSegmentation.cpp  GLGizmoSeam.cpp
src/slic3r/GUI/Widgets/: Button.cpp  CollapsibleSection.cpp  CollapsibleSection.hpp  CustomMenu.cpp  FlatStaticBox.cpp  FlatStaticBox.hpp  ScrollBar.cpp  ScrollBar.hpp  ScrollablePanel.cpp  ScrollablePanel.hpp  SpinInput.cpp  StaticBox.cpp  TextInput.cpp  ThemedTextCtrl.cpp  ThemedTextCtrl.hpp  UIColors.hpp
src/slic3r/Utils/: AppUpdater.cpp  Duet.cpp  Duet.hpp  Http.cpp  Http.hpp  MacDarkMode.hpp  MacDarkMode.mm  Moonraker.cpp  Moonraker.hpp  OctoPrint.cpp  OctoPrint.hpp  PrintHost.hpp
